--- a/package.json
+++ b/package.json
@@ -1,25 +1,30 @@
 {
   "name": "myappings",
   "version": "1.0.0",
-  "description": "hamza app",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "build": "mkdir build && cp -R client/. build/",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
+  
   },
   
   "repository": {
     "type": "git",
     "url": "git+https://github.com/hamzamaqsoodfast/myapp.git"
   },
-  "keywords": [
-    "wabot"
-  ],
-  "author": "HAMZA",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/hamzamaqsoodfast/myapp/issues"
-  },
-  "homepage": "https://github.com/hamzamaqsoodfast/myapp#readme"
+  "dependencies": {
+    "chromedriver": "^114.0.2",
+    "express": "^4.18.2",
+    "geckodriver": "^4.0.4",
+    "multer": "^1.4.5-lts.1",
+    "node-fetch": "^2.6.6",
+    "openai": "^3.3.0",
+    "selenium-webdriver": "^4.10.0",
+    "ws": "^8.13.0",
+    "xlsx": "^0.18.5",
+    "xlsx-populate": "^1.21.0"
+  }
 }
